--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/geolocation": "^4.2.0",
         "@ionic-native/google-maps": "^4.2.1",
         "@ionic-native/native-audio": "^4.2.1",
+        "@ionic-native/native-geocoder": "^4.2.1",
         "@ionic-native/native-storage": "^4.2.1",
         "@ionic-native/social-sharing": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
@@ -42,6 +43,7 @@
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
         "cordova-plugin-nativeaudio": "^3.0.9",
+        "cordova-plugin-nativegeocoder": "^2.0.2",
         "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
@@ -81,7 +83,8 @@
                 "APP_NAME": "Crater Gator"
             },
             "cordova-plugin-nativestorage": {},
-            "cordova-plugin-x-socialsharing": {}
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-plugin-nativegeocoder": {}
         },
         "platforms": [
             "android",
